# bevoids

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  profile.coz
.github/workflows/: check.yml  release.yml  rust.yml
assets/: settings.toml
bevoids_assets/: Cargo.toml
bevoids_assets/src/: lib.rs
bevoids_game/: Cargo.toml  build.rs
bevoids_game/assets/: settings.json  settings.toml
bevoids_game/src/: asset_io.rs  bevoids.rs  bounds.rs  main.rs  settings.json  text.rs
bevoids_game/src/bevoids/: asteroids.rs  gameover.rs  highscore.rs  hit_test.rs  laser.rs  menu.rs  movement.rs  paused.rs  player.rs  resources.rs  scoreboard.rs  settings.rs
bevoids_game/src/bevoids/ui/: gameover.rs  highscore.rs  main.rs  mod.rs  new_highscore.rs  paused.rs  playing.rs
bevoids_game/src/plugins/: asteroid_plugin.rs  fade_despawn_plugin.rs  gameover_plugin.rs  hit_test_plugin.rs  laser_plugin.rs  mod.rs  movement_plugin.rs  player_plugin.rs  scoreboard.rs
bevy_asset_map/: Cargo.toml
bevy_asset_map/src/: atlas.rs  audio.rs  bounds.rs  font.rs  lib.rs  texture.rs
bevy_effects/: Cargo.toml
bevy_effects/src/: animation.rs  despawn.rs  lib.rs  sound.rs
src/: asset_helper.rs  assets.rs  asteroid_plugin.rs  bounds.rs  bullet_plugin.rs  constants.rs  fade_despawn_plugin.rs  fade_plugin.rs  gameover_plugin.rs  hit_test.rs  main.rs  movement_plugin.rs  player_plugin.rs  plugins.rs  scoreboard.rs  settings.rs  text.rs  textures.rs
src/effects/: animation.rs  mod.rs  sound.rs
src/plugins/: asteroid_plugin.rs  bullet_plugin.rs  fade_despawn_plugin.rs  gameover_plugin.rs  hit_test_plugin.rs  laser_plugin.rs  movement_plugin.rs  player_plugin.rs  scoreboard.rs  textures.rs
src/resources/: atlas.rs  audio.rs  bounds.rs  font.rs  mod.rs  texture.rs
