[package]
name = "bevoids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
bevy_kira_audio = { version = "0.6.0", features = ["mp3", "wav"] }
parry2d = "0.7"
rand = "0.8.4"
derive_more = "0.99"
enum-iterator = "0.7"
walkdir = "2.3"

toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

thiserror = "1.0"
itertools = "0.10.1"

[dependencies.bevy]
version = "0.5"
default-features = false
features = [
    #"bevy_dynamic_plugin",
    "render",
    "bevy_wgpu",
    "bevy_winit",
    #"bevy_gilrs",
    #"bevy_gltf",
    "png",
    "jpeg",
    "x11",
    "wayland",
    #"trace",
    #"wgpu_trace",
]

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "6a8a8c9d21f32e0e46623db9438813b009f9e014" }
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio.git", branch = "bevy_main" }

[profile.dev.package."*"]
opt-level = 3
