[package]
name = "bevoids"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE-MIT"
authors = ["Johnny T. Vestergaard (jtv@jrtv.dk)"]
description = "A simple game, heavily inspired by the classic Asteroids"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_map = { path = "../bevy_asset_map" }
bevy_effects = { path = "../bevy_effects" }
bevy_egui = "0.8"
bevy_kira_audio = { version = "0.7.0", features = ["mp3", "wav"] }
bevy-inspector-egui = { version = "0.6", optional = true }
parry2d = "0.7"
rand = "0.8.4"
derive_more = "0.99"
enum-iterator = "0.7"
itertools = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "6.2"
directories = "4.0"

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["render", "bevy_wgpu", "bevy_winit", "png", "jpeg", "serialize"]

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
inspector = ["bevy-inspector-egui"]
