[package]
name = "bevy_asset_map"
version = "0.1.1"
edition = "2021"
authors = ["Johnny T. Vestergaard (jtv@jrtv.dk)"]
description = "Bevy plugins for the Bevoids game - resource loading & management"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version="0.6", default-features=false }
bevy_kira_audio = "0.8"

parry2d = "0.8"
itertools = "0.10"
