[package]
name = "bevy_effects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_map = { path = "../bevy_asset_map" }

bevy_kira_audio = "0.6"
itertools = "0.10"

[dependencies.bevy]
version = "0.5"
default-features = false
